html for homepage

--- a/index.html
+++ b/index.html
@@ -13,8 +13,90 @@
     <link rel="stylesheet" href="css/normalize.css" />
   </head>
   <body>
-    <h1>Heading One</h1>
-    <p>Paragraph One</p>
-    <section></section>
+    <header>
+      <!--Navigation bar-->
+    </header>
+
+    <main>
+      <section class="main-one">
+        <h1>Heading One</h1>
+        <p>Paragraph One</p>
+      </section>
+
+      <section class="main-two">
+        <section class="main-two-block1">
+          <h3>Title</h3>
+          <p>Content...</p>
+          <button>Click here for the latest rates</button>
+        </section>
+
+        <section class="main-two-block2">
+          <h3>Title</h3>
+          <p>Content...</p>
+          <button>Click here to convert your money</button>
+        </section>
+
+        <section class="main-two-block3">
+          <h3>Title</h3>
+          <p>Content...</p>
+          <button>Click here to convert to...</button>
+        </section>
+      </section>
+
+      <section class="main-three">
+        <h2></h2>
+        <p></p>
+      </section>
+
+      <section class="main-four">
+        <section class="main-four-block1">
+          <h3></h3>
+          <p></p>
+          <button></button>
+          <img src="" alt="" />
+        </section>
+
+        <section class="main-four-block2">
+          <h3></h3>
+          <p></p>
+          <button></button>
+          <img src="" alt="" />
+        </section>
+
+        <section class="main-four-block1">
+          <h3></h3>
+          <p></p>
+          <button></button>
+        </section>
+
+        <section class="icon-one">
+          <img src="" alt="" />
+        </section>
+
+        <section class="icon-two">
+          <img src="" alt="" />
+        </section>
+      </section>
+    </main>
+
+    <footer>
+      <section>
+        <h3>Currency X</h3>
+      </section>
+
+      <section>
+        <h4></h4>
+        <p></p>
+      </section>
+
+      <section>
+        <h4></h4>
+        <p></p>
+      </section>
+
+      <section>
+        <p>Copyright 2024</p>
+      </section>
+    </footer>
   </body>
 </html>
