--- a/index.html
+++ b/index.html
@@ -19,62 +19,96 @@
 
     <main>
       <section class="main-one">
-        <h1>Heading One</h1>
-        <p>Paragraph One</p>
+        <h1 class="p-name">Know Your Money's Worth</h1>
+        <p class="p-summary">
+          We are here to keep you up to date with up to 170 currencies from
+          around the world
+        </p>
       </section>
 
-      <section class="main-two">
-        <section class="main-two-block1">
-          <h3>Title</h3>
-          <p>Content...</p>
-          <button>Click here for the latest rates</button>
-        </section>
+      <section>
+        <p class="main-two-para">
+          More contextual information here about data viz and website
+        </p>
 
-        <section class="main-two-block2">
-          <h3>Title</h3>
-          <p>Content...</p>
-          <button>Click here to convert your money</button>
-        </section>
+        <section class="main-two-display">
+          <section class="main-two-block1">
+            <h3 class="p-name">Title</h3>
+            <p class="p-summary">Content...</p>
+            <button>Click here for the latest rates</button>
+          </section>
 
-        <section class="main-two-block3">
-          <h3>Title</h3>
-          <p>Content...</p>
-          <button>Click here to convert to...</button>
+          <section class="main-two-block2">
+            <h3 class="p-name">Title</h3>
+            <p class="p-summary">Content...</p>
+            <button>Click here to convert your money</button>
+          </section>
+
+          <section class="main-two-block3">
+            <h3 class="p-name">Title</h3>
+            <p class="p-summary">Content...</p>
+            <button>Click here to convert to...</button>
+          </section>
         </section>
       </section>
 
       <section class="main-three">
-        <h2></h2>
-        <p></p>
+        <h2 class="p-name">About Currency X</h2>
+        <p class="p-summary">
+          Currency X is a commercial website dedicated to give you the latest
+          rates for your money.
+        </p>
       </section>
 
       <section class="main-four">
-        <section class="main-four-block1">
-          <h3></h3>
-          <p></p>
-          <button></button>
-          <img src="" alt="" />
+        <section class="main-four-block1 flex-container">
+          <section class="text-content">
+            <h3 class="p-name">Title</h3>
+            <p class="p-summary">Content...</p>
+            <button>Learn More</button>
+          </section>
+
+          <img
+            src="images/trader.png"
+            alt="image of a man making a chart on his laptop"
+            class="main-four-block1-icon"
+          />
         </section>
 
-        <section class="main-four-block2">
-          <h3></h3>
-          <p></p>
-          <button></button>
-          <img src="" alt="" />
+        <section class="main-four-block2 flex-container">
+          <section>
+            <h3 class="p-name">Title</h3>
+            <p class="p-summary">Content...</p>
+            <button>Learn More</button>
+          </section>
+
+          <img
+            src="images/theory.png"
+            alt="image of a book, pencil and lightbulb"
+            class="main-four-block2-icon"
+          />
         </section>
 
-        <section class="main-four-block1">
-          <h3></h3>
-          <p></p>
-          <button></button>
+        <section class="main-four-block3">
+          <h3 class="p-name">Title</h3>
+          <p class="p-summary">Content...</p>
+          <button>Learn More</button>
         </section>
 
-        <section class="icon-one">
-          <img src="" alt="" />
+        <section>
+          <img
+            src="/Exam-Commercial-Website/images/exchange-rate (1).png"
+            alt="image of exchange rates"
+            class="icon-one"
+          />
         </section>
 
-        <section class="icon-two">
-          <img src="" alt="" />
+        <section>
+          <img
+            src="/Exam-Commercial-Website/images/exchange-rate.png"
+            alt="image of exchange rates"
+            class="icon-two"
+          />
         </section>
       </section>
     </main>
@@ -85,18 +119,20 @@
       </section>
 
       <section>
-        <h4></h4>
-        <p></p>
+        <h4 class="p-name">Contact us</h4>
+        <p class="p-summary">Content</p>
       </section>
 
       <section>
-        <h4></h4>
-        <p></p>
+        <h4 class="p-name">Attributions</h4>
+        <p class="p-summary">Content</p>
       </section>
 
       <section>
         <p>Copyright 2024</p>
       </section>
     </footer>
+
+    <!--js script-->
   </body>
 </html>
