--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   <body>
     <header>
       <!--Navigation bar-->
+      <button>Option 1</button>
+      <button>Option 2</button>
+      <button>Option 3</button>
+      <section class="nav-content">
+        <button>Link</button>
+        <button>Link</button>
+        <button>Link</button>
+        <button>Link</button>
+        <button>Link</button>
+        <button>Link</button>
+      </section>
     </header>
 
     <main>
