design html + css

--- a/html/design.html
+++ b/html/design.html
@@ -5,45 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!--Meta tags-->
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/design.css" />
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/normalize.css" />
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/consistent.css" />
   </head>
   <body>
     <header></header>
 
     <main>
-      <section class="flex-display">
-        <h1 class="p-name">Title</h1>
-        <p class="p-summary">Content here...</p>
-        <img src="" alt="Image of ..." />
+      <section class="grid-display">
+        <h1 class="p-name">Heading 1</h1>
+        <p class="p-summary p-1">
+          Paragraph 1...This is Lorem ipsum dolor sit, amet consectetur
+          adipisicing elit. Non accusamus, eum incidunt praesentium repudiandae
+          labore laboriosam nulla voluptatum nam atque commodi eos alias sequi
+          mollitia debitis harum molestiae voluptate voluptatibus.
+        </p>
+        <img src="" alt="Image of ..." class="img-1" />
       </section>
 
       <section class="table-of-contents">
-        <li></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
       </section>
 
-      <section>
-        <h2 class="p-name">Heading</h2>
+      <!--Adding content through JS, add 2 more sections for webpage -->
+      <section class="content-one">
+        <h2 class="p-name">Wireframe Heading</h2>
         <h3 class="p-title">Sub title here</h3>
         <p class="p-summary">content</p>
-        <!--Adding content through JS, add 2 more sections for webpage -->
+        <section class="wireframe-container">
+          <img src="" alt="Wireframes" />
+          <button><img src="" alt="left arrow" /></button>
+          <button><img src="" alt="right arrow" /></button>
+        </section>
+      </section>
+
+      <section class="content-two">
+        <h2 class="p-name">Style Guide Heading</h2>
+        <h3 class="p-title">Sub title here</h3>
+        <p class="p-summary">content</p>
       </section>
     </main>
 
     <footer>
-      <section>
+      <section class="one">
         <h3>Currency X</h3>
       </section>
 
-      <section>
+      <section class="two">
         <h4 class="p-name">Contact us</h4>
         <p class="p-summary">Content</p>
       </section>
 
-      <section>
+      <section class="three">
         <h4 class="p-name">Attributions</h4>
         <p class="p-summary">Content</p>
       </section>
 
-      <section>
+      <section class="four">
         <p>Copyright 2024</p>
       </section>
     </footer>
