--- a/html/about.html
+++ b/html/about.html
@@ -5,6 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!--Meta tags-->
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/consistent.css" />
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/normalize.css" />
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/about.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+
+    <main>
+      <section class="grid-display">
+        <h1 class="p-name">Heading 1</h1>
+        <p class="p-summary p-1">
+          Paragraph 1...This is Lorem ipsum dolor sit, amet consectetur
+          adipisicing elit. Non accusamus, eum incidunt praesentium repudiandae
+          labore laboriosam nulla voluptatum nam atque commodi eos alias sequi
+          mollitia debitis harum molestiae voluptate voluptatibus.
+        </p>
+        <img src="" alt="Image of ..." class="img-1" />
+      </section>
+
+      <section class="table-of-contents">
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </section>
+
+      <section class="content-one">
+        <h2 class="p-name">What is the Fixer API?</h2>
+        <p class="p-summary">
+          This is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+          porro voluptas, architecto adipisci numquam eius illum sequi,
+          quibusdam, incidunt tenetur velit similique quis officiis quidem
+          totam. Cupiditate labore asperiores ex.
+        </p>
+      </section>
+
+      <section class="content-two">
+        <h3 class="p-name">What you can do?</h3>
+        <p class="p-summary">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, quos
+          ad sed nulla sint nesciunt qui harum facere, nobis eligendi, labore
+          quidem distinctio. Quam possimus, dolore ad maxime cumque unde.
+        </p>
+
+        <h3>Joining is as simple as:</h3>
+        <section class="api-grid"></section>
+      </section>
+    </main>
+
+    <footer>
+      <section class="one">
+        <h3>Currency X</h3>
+      </section>
+
+      <section class="two">
+        <h4 class="p-title">Contact us</h4>
+        <p class="p-street-address">Content</p>
+      </section>
+
+      <section class="three">
+        <h4 class="p-name">Attributions</h4>
+        <p class="p-summary">Content</p>
+      </section>
+
+      <section class="four">
+        <p>Copyright 2024</p>
+      </section>
+    </footer>
+  </body>
 </html>
