about + data viz + consistent style

--- a/html/about.html
+++ b/html/about.html
@@ -47,8 +47,26 @@
           quidem distinctio. Quam possimus, dolore ad maxime cumque unde.
         </p>
 
-        <h3>Joining is as simple as:</h3>
-        <section class="api-grid"></section>
+        <h3 class="p-name">Joining is as simple as:</h3>
+        <section class="api-grid">
+          <section class="api-grid-one">
+            <h4 class="p-title">Title</h4>
+            <p class="p-summary">Content...</p>
+            <img src="" alt="image of ?" />
+          </section>
+
+          <section class="api-grid-two">
+            <h4 class="p-title">Title</h4>
+            <p class="p-summary">Content...</p>
+            <img src="" alt="image of?" />
+          </section>
+
+          <section class="api-grid-three">
+            <h4 class="p-title">Title</h4>
+            <p class="p-summary">Content...</p>
+            <img src="" alt="image of?" />
+          </section>
+        </section>
       </section>
     </main>
 
