--- a/html/data viz.html
+++ b/html/data viz.html
@@ -12,7 +12,7 @@
     <header></header>
     <main>
       <section class="grid-display">
-        <h1 class="p-name">Heading 1</h1>
+        <h1 class="p-name h1-all">Heading 1</h1>
         <p class="p-summary p-1">
           Paragraph 1...This is Lorem ipsum dolor sit, amet consectetur
           adipisicing elit. Non accusamus, eum incidunt praesentium repudiandae
