--- a/html/theory.html
+++ b/html/theory.html
@@ -14,7 +14,7 @@
 
     <main>
       <section class="grid-display">
-        <h1 class="p-name">Theory Heading</h1>
+        <h1 class="p-name h1-all">Theory Heading</h1>
         <p class="p-1 p-summary">
           Paragraph one... Lorem ipsum dolor sit, amet consectetur adipisicing
           elit. Reiciendis fugit quos officiis quas aliquam magnam sint minima
