--- a/index.html
+++ b/index.html
@@ -11,21 +11,46 @@
     <!--CSS links-->
     <link rel="stylesheet" href="css/homepage.css" />
     <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/consistent.css" />
   </head>
   <body>
     <header>
-      <!--Navigation bar-->
-      <button>Option 1</button>
-      <button>Option 2</button>
-      <button>Option 3</button>
-      <section class="nav-content">
-        <button>Link</button>
-        <button>Link</button>
-        <button>Link</button>
-        <button>Link</button>
-        <button>Link</button>
-        <button>Link</button>
-      </section>
+      <nav>
+        <!--Navigation bar-->
+        <img
+          src="/Exam-Commercial-Website/images/Exam.png"
+          alt="Image of website's logo"
+        />
+        <div class="dropdown">
+          <button>Data Visualizations</button>
+          <section class="nav-content">
+            <button>Data viz 1</button>
+            <button>Data Viz 2</button>
+            <button>Data Viz 3</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>Theory</button>
+          <section class="nav-content">
+            <button>Critical Essay</button>
+            <button>Essay (A2)</button>
+            <button>Workflow</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>Design</button>
+          <section class="nav-content">
+            <button>Wireframes</button>
+            <button>Style Guide</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>The API</button>
+          <section class="nav-content">
+            <button>Read More</button>
+          </section>
+        </div>
+      </nav>
     </header>
 
     <main>
