--- a/html/data viz.html
+++ b/html/data viz.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <header></header>
+
     <main>
       <section class="grid-display">
-        <h1 class="p-name h1-all">Heading 1</h1>
+        <h1 class="p-name h1-all">Your Money's Value</h1>
         <p class="p-summary p-1">
           Paragraph 1...This is Lorem ipsum dolor sit, amet consectetur
           adipisicing elit. Non accusamus, eum incidunt praesentium repudiandae
@@ -22,11 +23,33 @@
         <img src="" alt="Image of ..." class="img-1" />
       </section>
 
-      <section class="table-of-contents">
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+      <section class="select-currency">
+        <p>What Currency Do You Use?</p>
+        <dropdown></dropdown>
+      </section>
+
+      <section class="data-viz-one">
+        <h2>The Latest Current Rates</h2>
+        <section class="bar-graph-latest">
+          <!--Section where bar graph one goes-->
+        </section>
+      </section>
+
+      <section class="data-viz-two">
+        <h2>Difference between your currency and another</h2>
+        <p>Choose another currency rate of your choice:</p>
+        <dropdown></dropdown>
+        <section class="bar-graph-compare">
+          <!--Section where bar graph two goes-->
+        </section>
+      </section>
+
+      <section>
+        <h2>The history of your currency rate:</h2>
+        <!--Dynamic timeline, as user scrolls down, values and icons appear-->
       </section>
     </main>
+
     <footer>
       <section class="one">
         <h3>Currency X</h3>
