--- a/html/design.html
+++ b/html/design.html
@@ -43,8 +43,7 @@
 
       <section class="content-two">
         <h2 class="p-name">Style Guide Heading</h2>
-        <h3 class="p-title">Sub title here</h3>
-        <p class="p-summary">content</p>
+        <section class="style-guide-container"></section>
       </section>
     </main>
 
@@ -69,5 +68,6 @@
     </footer>
 
     <!--JS Script-->
+    <script type="module" src="/Exam-Commercial-Website/js/design.js"></script>
   </body>
 </html>
