--- a/html/data viz.html
+++ b/html/data viz.html
@@ -7,6 +7,8 @@
     <!--Meta tags-->
     <link rel="stylesheet" href="/Exam-Commercial-Website/css/consistent.css" />
     <link rel="stylesheet" href="/Exam-Commercial-Website/css/normalize.css" />
+    <link rel="stylesheet" href="/Exam-Commercial-Website/css/data viz.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
   </head>
   <body>
     <header></header>
@@ -23,16 +25,16 @@
         <img src="" alt="Image of ..." class="img-1" />
       </section>
 
-      <section class="select-currency">
-        <p>What Currency Do You Use?</p>
-        <dropdown></dropdown>
-      </section>
+      <section>
+        <div>
+          <label for="currency">Select Your Currency:</label>
+          <select id="currency" onchange="updateGraph()"></select>
+        </div>
 
-      <section class="data-viz-one">
-        <h2>The Latest Current Rates</h2>
-        <section class="bar-graph-latest">
-          <!--Section where bar graph one goes-->
-        </section>
+        <div id="bar-graph">
+          <svg id="bar-graph-svg"></svg>
+          <div class="tooltip"></div>
+        </div>
       </section>
 
       <section class="data-viz-two">
@@ -69,5 +71,6 @@
         <p>Copyright 2024</p>
       </section>
     </footer>
+    <script src="/Exam-Commercial-Website/js/data viz.js"></script>
   </body>
 </html>
