--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
           />
         </section>
       </section>
+
+      <section class="scroll">
+        <a href="#top">
+          <img
+            src="/Exam-Commercial-Website/images/32213.png"
+            alt="image of an arrow"
+            class="scroll-img"
+        /></a>
+      </section>
     </main>
 
     <footer>
