home page styling

--- a/index.html
+++ b/index.html
@@ -62,90 +62,99 @@
         </p>
       </section>
 
-      <section>
-        <p class="main-two-para">
-          More contextual information here about data viz and website
-        </p>
-
+      <section class="main-two">
         <section class="main-two-display">
           <section class="main-two-block1">
-            <h3 class="p-name">Title</h3>
-            <p class="p-summary">Content...</p>
-            <button>Click here for the latest rates</button>
+            <h3 class="p-name">Get the latest rates</h3>
+            <img
+              src="/Exam-Commercial-Website/images/freestock_698220.jpg"
+              alt="image of bars with currency rates"
+              class="u-photo"
+            />
+            <p class="p-summary">
+              We provide the latest currency rates for your money and many more
+            </p>
+            <button>Click here for more</button>
           </section>
 
           <section class="main-two-block2">
-            <h3 class="p-name">Title</h3>
-            <p class="p-summary">Content...</p>
-            <button>Click here to convert your money</button>
+            <h3 class="p-name">Convert your money</h3>
+            <img
+              src="/Exam-Commercial-Website/images/freestock_42636625.jpg"
+              alt="image of different currecy rates"
+              class="u-photo"
+            />
+            <p class="p-summary">
+              Our converter aims to give you accurate and correct values
+            </p>
+            <button>Click here for more</button>
           </section>
 
           <section class="main-two-block3">
             <h3 class="p-name">Title</h3>
+            <img src="" alt="image of a ..." class="u-photo" />
             <p class="p-summary">Content...</p>
-            <button>Click here to convert to...</button>
+            <button>Click here for more</button>
           </section>
         </section>
       </section>
 
       <section class="main-three">
-        <h2 class="p-name">About Currency X</h2>
+        <p class="main-two-para">
+          Here at Currency X, we are determined to give you the latest
+          information for worldwide currency rates. It is important to know your
+          money's worth and everyone else's
+        </p>
+
+        <img
+          src="/Exam-Commercial-Website/images/freestock_114106273.jpg"
+          alt="image of woman smiling happily from her laptop"
+          class="u-photo"
+        />
+
+        <h2 class="p-name">About Us</h2>
         <p class="p-summary">
-          Currency X is a commercial website dedicated to give you the latest
-          rates for your money.
+          Currency X is a website submitted for the Interactive Media Exam
         </p>
       </section>
 
       <section class="main-four">
+        <h3>Take a dive into the process</h3>
         <section class="main-four-block1 flex-container">
+
           <section class="text-content">
-            <h3 class="p-name">Title</h3>
-            <p class="p-summary">Content...</p>
+            <h4 class="p-name">Design</h3>
+            <p class="p-summary">Take a look at our wireframes and style guide that showcases the design process and choices for this website</p>
             <button>Learn More</button>
           </section>
 
           <img
-            src="images/trader.png"
-            alt="image of a man making a chart on his laptop"
+            src="/Exam-Commercial-Website/images/freestock_431080024.jpg"
+            alt="image of people working around a laptop"
             class="main-four-block1-icon"
           />
         </section>
 
         <section class="main-four-block2 flex-container">
-          <section>
-            <h3 class="p-name">Title</h3>
-            <p class="p-summary">Content...</p>
+          <section  class="text-content">
+            <h4 class="p-name">Theory</h3>
+            <p class="p-summary">Dive into the theoretical aspects on the process of making this essay</p>
             <button>Learn More</button>
           </section>
 
           <img
-            src="images/theory.png"
-            alt="image of a book, pencil and lightbulb"
+            src="/Exam-Commercial-Website/images/freestock_60124597.jpg"
+            alt="image of a woman with books on top of her head"
             class="main-four-block2-icon"
           />
         </section>
 
         <section class="main-four-block3">
-          <h3 class="p-name">Title</h3>
-          <p class="p-summary">Content...</p>
+          <h4 class="p-name">About the API</h3>
+          <p class="p-summary">Interested in the API that was used to get our data?</p>
           <button>Learn More</button>
         </section>
 
-        <section>
-          <img
-            src="/Exam-Commercial-Website/images/exchange-rate (1).png"
-            alt="image of exchange rates"
-            class="icon-one"
-          />
-        </section>
-
-        <section>
-          <img
-            src="/Exam-Commercial-Website/images/exchange-rate.png"
-            alt="image of exchange rates"
-            class="icon-two"
-          />
-        </section>
       </section>
 
       <section class="scroll">
