--- a/html/design.html
+++ b/html/design.html
@@ -14,35 +14,45 @@
 
     <main>
       <section class="grid-display">
-        <h1 class="p-name h1-all">Heading 1</h1>
+        <h1 class="p-name h1-all">Design</h1>
         <p class="p-summary p-1">
-          Paragraph 1...This is Lorem ipsum dolor sit, amet consectetur
-          adipisicing elit. Non accusamus, eum incidunt praesentium repudiandae
-          labore laboriosam nulla voluptatum nam atque commodi eos alias sequi
-          mollitia debitis harum molestiae voluptate voluptatibus.
+          The design section contains the wireframes and style guide for the
+          exam that reflect the design decisions made for this website
         </p>
         <img src="" alt="Image of ..." class="img-1" />
       </section>
 
       <section class="table-of-contents">
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <ul>
+          <a href="">Wireframes from assignment 3</a>
+        </ul>
+        <ul>
+          <a href="">Mid fidelity wireframes for exam</a>
+        </ul>
+        <ul>
+          <a href="">High fidelity wireframes for exam</a>
+        </ul>
+        <ul>
+          <a href="#style-guide-anchor">Style Guide</a>
+        </ul>
       </section>
 
       <!--Adding content through JS, add 2 more sections for webpage -->
       <section class="content-one">
-        <h2 class="p-name">Wireframe Heading</h2>
-        <h3 class="p-title">Sub title here</h3>
+        <h2 class="p-name">Wireframes</h2>
+        <h3 class="p-title">From Assignment 3</h3>
         <p class="p-summary">content</p>
         <section class="wireframe-container">
           <img src="" alt="Wireframes" />
-          <button><img src="" alt="left arrow" /></button>
-          <button><img src="" alt="right arrow" /></button>
+          <section>
+            <button><img src="" alt="left arrow" /></button>
+            <button><img src="" alt="right arrow" /></button>
+          </section>
         </section>
       </section>
 
       <section class="content-two">
-        <h2 class="p-name">Style Guide Heading</h2>
+        <h2 class="p-name" id="style-guide-anchor">Style Guide</h2>
         <section class="style-guide-container"></section>
       </section>
     </main>
