--- a/html/data viz.html
+++ b/html/data viz.html
@@ -33,6 +33,7 @@
           </select>
         </div>
 
+        <h2>The latest currency rates</h2>
         <section class="graph-container">
           <!-- Graph data visualisation-->
           <div class="tooltip"></div>
@@ -42,8 +43,8 @@
 
       <!--Conversion data visualisation-->
       <section class="chart-container">
-        <h2>...</h2>
-        <p>It is...</p>
+        <h2>Convert your money</h2>
+
         <section class="input-container">
           <label for="amount">Enter your amount:</label>
           <input type="number" id="amount" placeholder="Enter amount..." />
@@ -58,6 +59,23 @@
         <button id="convert-btn">Convert</button>
         <p id="result">Converted amount:</p>
         <svg id="chart" width="400" height="200"></svg>
+      </section>
+
+      <section>
+        <h2>Filter out the range of a currency of your choice</h2>
+        <div class="slider-container">
+          <label for="start-date">Start Date: </label>
+          <input type="date" id="start-date" />
+
+          <label for="end-date">End Date: </label>
+          <input type="date" id="end-date" />
+
+          <label for="base-currency-3">Base Currency: </label>
+          <select id="base-currency-3"></select>
+        </div>
+        <button id="generate-chart-button">Generate Chart</button>
+
+        <svg id="rate-chart" width="800" height="400"></svg>
       </section>
     </main>
 
