--- a/index.html
+++ b/index.html
@@ -157,6 +157,29 @@
 
       </section>
 
+      <section>
+        <h3>Interested in getting regular updates?</h3>
+        <p>Subscribe to our newsletter</p>
+        <form method="post"> 
+          <fieldset>
+          <label for="full-name">Enter your full name:
+            <input type="text" name="full-name" id="full-name" required>
+          </label>
+          <label for="email">Enter your email: 
+            <input type="email" name="email" id="email" required>
+          </label>
+          <label for="password">Create your password: 
+            <input type="password" id="password" name="password" pattern="[a-z0-5]{8,}" minlength="5" maxlength="15" required>
+          </label>
+          <label for="phone-number">Type in your phone number: 
+            <input type="number" name="phone-number" id="phone-number">
+          </label>          
+          <label for=""></label>  
+          </fieldset>
+        </form>
+       
+      </section>
+
       <section class="scroll">
         <a href="#top">
           <img
