styling and theory

--- a/html/about.html
+++ b/html/about.html
@@ -31,21 +31,12 @@
 
       <section class="content-one">
         <h2 class="p-name">What is the Fixer API?</h2>
-        <p class="p-summary">
-          This is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-          porro voluptas, architecto adipisci numquam eius illum sequi,
-          quibusdam, incidunt tenetur velit similique quis officiis quidem
-          totam. Cupiditate labore asperiores ex.
-        </p>
+        <p class="p-summary">The Fixer API is a</p>
       </section>
 
       <section class="content-two">
         <h3 class="p-name">What you can do?</h3>
-        <p class="p-summary">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, quos
-          ad sed nulla sint nesciunt qui harum facere, nobis eligendi, labore
-          quidem distinctio. Quam possimus, dolore ad maxime cumque unde.
-        </p>
+        <p class="p-summary">Anyone can</p>
 
         <h3 class="p-name">Joining is as simple as:</h3>
         <section class="api-grid">
