--- a/html/design.html
+++ b/html/design.html
@@ -10,7 +10,46 @@
     <link rel="stylesheet" href="/Exam-Commercial-Website/css/consistent.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <!--Navigation bar-->
+        <button id="hm-nav-btn">
+          <img
+            src="/Exam-Commercial-Website/images/Exam.png"
+            alt="Image of website's logo"
+          />
+        </button>
+        <div class="dropdown">
+          <button>Data Visualizations</button>
+          <section class="nav-content">
+            <button id="data-nav-btn">Data viz 1</button>
+            <button id="data-nav-btn">Data Viz 2</button>
+            <button id="data-nav-btn">Data Viz 3</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>Theory</button>
+          <section class="nav-content">
+            <button id="theory-nav-btn">Critical Essay</button>
+            <button id="theory-nav-btn">Essay (A2)</button>
+            <button id="theory-nav-btn">Workflow</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>Design</button>
+          <section class="nav-content">
+            <button id="design-nav-btn">Wireframes</button>
+            <button id="design-nav-btn">Style Guide</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>The API</button>
+          <section class="nav-content">
+            <button id="api-nav-btn">Read More</button>
+          </section>
+        </div>
+      </nav>
+    </header>
 
     <main>
       <section class="grid-display">
@@ -19,7 +58,6 @@
           The design section contains the wireframes and style guide for the
           exam that reflect the design decisions made for this website
         </p>
-        <img src="" alt="Image of ..." class="img-1" />
       </section>
 
       <section class="table-of-contents">
@@ -35,17 +73,9 @@
       </section>
 
       <!--Adding content through JS, add 2 more sections for webpage -->
-      <section class="content-one">
-        <h2 class="p-name">Wireframes</h2>
-        <h3 class="p-title">From Assignment 3</h3>
-        <p class="p-summary">content</p>
-        <section class="wireframe-container">
-          <img src="" alt="Wireframes" />
-          <section>
-            <button><img src="" alt="left arrow" /></button>
-            <button><img src="" alt="right arrow" /></button>
-          </section>
-        </section>
+      <section class="main-two">
+        <h2 class="p-title">High fidelity wireframes</h2>
+        <section class="wireframe-container"></section>
       </section>
 
       <section class="content-two">
@@ -59,14 +89,42 @@
         <h3>Currency X</h3>
       </section>
 
-      <section class="two">
-        <h4 class="p-name">Contact us</h4>
-        <p class="p-summary">Content</p>
+      <section>
+        <h4 class="p-name">Attributions</h4>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/woman-paying-bills-online-looking-happy-114106273"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/black-graphs-currency-signs-698220"
+            >Image used under license from Freestock.com</a
+          >+
+        </ul>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/illustration-directional-currency-sign-white-background-42636625"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
       </section>
 
-      <section class="three">
+      <section>
         <h4 class="p-name">Attributions</h4>
-        <p class="p-summary">Content</p>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/multi-ethnic-group-succesful-creative-business-431080024"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/woman-carrying-books-head-trying-balance-60124597"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
       </section>
 
       <section class="four">
