--- a/html/data viz.html
+++ b/html/data viz.html
@@ -11,21 +11,58 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <!--Navigation bar-->
+        <button id="hm-nav-btn">
+          <img
+            src="/Exam-Commercial-Website/images/Exam.png"
+            alt="Image of website's logo"
+          />
+        </button>
+        <div class="dropdown">
+          <button>Data Visualizations</button>
+          <section class="nav-content">
+            <button id="data-nav-btn">Data viz 1</button>
+            <button id="data-nav-btn">Data Viz 2</button>
+            <button id="data-nav-btn">Data Viz 3</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>Theory</button>
+          <section class="nav-content">
+            <button id="theory-nav-btn">Critical Essay</button>
+            <button id="theory-nav-btn">Essay (A2)</button>
+            <button id="theory-nav-btn">Workflow</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>Design</button>
+          <section class="nav-content">
+            <button id="design-nav-btn">Wireframes</button>
+            <button id="design-nav-btn">Style Guide</button>
+          </section>
+        </div>
+        <div class="dropdown">
+          <button>The API</button>
+          <section class="nav-content">
+            <button id="api-nav-btn">Read More</button>
+          </section>
+        </div>
+      </nav>
+    </header>
 
     <main>
       <section class="grid-display">
         <h1 class="p-name h1-all">Your Money's Value</h1>
         <p class="p-summary p-1">
-          Paragraph 1...This is Lorem ipsum dolor sit, amet consectetur
-          adipisicing elit. Non accusamus, eum incidunt praesentium repudiandae
-          labore laboriosam nulla voluptatum nam atque commodi eos alias sequi
-          mollitia debitis harum molestiae voluptate voluptatibus.
+          Use our services to keep updated with the latest currency rates,
+          select your rate and you will see the comparison between yours and
+          others. Use our converter to see how much value you are recieving.
         </p>
-        <img src="" alt="Image of ..." class="img-1" />
       </section>
 
-      <section>
+      <section class="bar-graph-container">
         <div class="currency-dropdown">
           <label for="currency-dropdown">Choose Your Currency Rate</label>
           <select id="currency-dropdown">
@@ -61,7 +98,7 @@
         <svg id="chart" width="400" height="200"></svg>
       </section>
 
-      <section>
+      <section class="line-graph-container">
         <h2>Filter out the range of a currency of your choice</h2>
         <div class="slider-container">
           <label for="start-date">Start Date: </label>
@@ -72,9 +109,15 @@
 
           <label for="base-currency-3">Base Currency: </label>
           <select id="base-currency-3"></select>
+          <button id="generate-chart-button">Generate Chart</button>
         </div>
-        <button id="generate-chart-button">Generate Chart</button>
 
+        <div id="loading-message">
+          <div class="spinner"></div>
+          Loading chart...
+        </div>
+
+        <div id="tooltip-two"></div>
         <svg id="rate-chart" width="800" height="400"></svg>
       </section>
     </main>
@@ -84,20 +127,51 @@
         <h3>Currency X</h3>
       </section>
 
-      <section class="two">
-        <h4 class="p-title">Contact us</h4>
-        <p class="p-street-address">Content</p>
+      <section>
+        <h4 class="p-name">Attributions</h4>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/woman-paying-bills-online-looking-happy-114106273"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/black-graphs-currency-signs-698220"
+            >Image used under license from Freestock.com</a
+          >+
+        </ul>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/illustration-directional-currency-sign-white-background-42636625"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
       </section>
 
-      <section class="three">
+      <section>
         <h4 class="p-name">Attributions</h4>
-        <p class="p-summary">Content</p>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/multi-ethnic-group-succesful-creative-business-431080024"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
+        <ul>
+          <a
+            href="https://www.freestock.com/free-photos/woman-carrying-books-head-trying-balance-60124597"
+            >Image used under license from Freestock.com</a
+          >
+        </ul>
       </section>
 
       <section class="four">
         <p>Copyright 2024</p>
       </section>
     </footer>
-    <script src="/Exam-Commercial-Website/js/data viz.js"></script>
+    <script
+      type="module"
+      src="/Exam-Commercial-Website/js/data viz.js"
+    ></script>
   </body>
 </html>
