--- a/html/theory.html
+++ b/html/theory.html
@@ -74,6 +74,7 @@
       </section>
 
       <section class="content-one" id="content-one">
+        <h2 class="p-title">Essay</h2>
         <section class="essay-container"></section>
       </section>
 
