--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="p-summary">
               We provide the latest currency rates for your money and many more
             </p>
-            <button>Click here for more</button>
+            <button class="data-viz-one">Click here for more</button>
           </section>
 
           <section class="main-two-block2">
@@ -89,14 +89,14 @@
             <p class="p-summary">
               Our converter aims to give you accurate and correct values
             </p>
-            <button>Click here for more</button>
+            <button class="data-viz-two">Click here for more</button>
           </section>
 
           <section class="main-two-block3">
             <h3 class="p-name">Check the highs and lows</h3>
             <img src="/Exam-Commercial-Website/images/freestock_73351369.jpg" alt="image of rising bars" class="u-photo" />
             <p class="p-summary">Our historical tracker gives the recent ups and downs for your preferred currency</p>
-            <button>Click here for more</button>
+            <button class="data-viz-three">Click here for more</button>
           </section>
         </section>
       </section>
@@ -127,7 +127,7 @@
           <section class="text-content">
             <h4 class="p-name">Design</h3>
             <p class="p-summary">Take a look at our wireframes and style guide that showcases the design process and choices for this website</p>
-            <button>Learn More</button>
+            <button class="design-inter-btn">Learn More</button>
           </section>
 
           <img
@@ -141,7 +141,7 @@
           <section  class="text-content">
             <h4 class="p-name">Theory</h3>
             <p class="p-summary">Dive into the theoretical aspects on the process of making this essay</p>
-            <button>Learn More</button>
+            <button class="theory-inter-btn">Learn More</button>
           </section>
 
           <img
@@ -154,7 +154,7 @@
         <section class="main-four-block3">
           <h4 class="p-name">About the API</h3>
           <p class="p-summary">Interested in the API that was used to get our data?</p>
-          <button>Learn More</button>
+          <button class="api-inter-btn">Learn More</button>
         </section>
 
       </section>
