--- a/html/design.html
+++ b/html/design.html
@@ -62,11 +62,9 @@
 
       <section class="table-of-contents">
         <ul>
-          <a href="">Mid fidelity wireframes for exam</a>
+          <a href="#wireframes">Wireframes for exam</a>
         </ul>
-        <ul>
-          <a href="">High fidelity wireframes for exam</a>
-        </ul>
+
         <ul>
           <a href="#style-guide-anchor">Style Guide</a>
         </ul>
@@ -74,7 +72,7 @@
 
       <!--Adding content through JS, add 2 more sections for webpage -->
       <section class="main-two">
-        <h2 class="p-title">High fidelity wireframes</h2>
+        <h2 class="p-title" id="wireframes">Wireframes</h2>
         <section class="wireframe-container"></section>
       </section>
 
